--- a/locales/ja.json
+++ b/locales/ja.json
@@ -5,7 +5,7 @@
     "Page {page} of {pages}": "Page {page} of {pages}",
     "Subscribe": "Subscribe",
     "Subscribe to {blogtitle}": "Subscribe to {blogtitle}",
-    "Subscribed!": "Subscribed!",
+    "Subscribed!": "Subscribed!!",
     "with the email address": "with the email address",
     "Your email address": "Your email address",
     "You’ve successfully subscribed to": "You've successfully subscribed to",
