--- a/locales/ja.json
+++ b/locales/ja.json
@@ -1,34 +1,34 @@
 {
-    "Back": "bock",
-    "Newer Posts": "Newer Posts",
-    "Older Posts": "Older Posts",
-    "Page {page} of {pages}": "Page {page} of {pages}",
-    "Subscribe": "Subscribe",
-    "Subscribe to {blogtitle}": "Subscribe to {blogtitle}",
-    "Subscribed!": "Subscribed!!",
-    "with the email address": "with the email address",
-    "Your email address": "Your email address",
-    "You’ve successfully subscribed to": "You've successfully subscribed to",
-    "A collection of posts": "A collection of posts",
+    "Back": "戻る",
+    "Newer Posts": "次の記事",
+    "Older Posts": "前の記事",
+    "Page {page} of {pages}": "{page} / {pages}",
+    "Subscribe": "購読する",
+    "Subscribe to {blogtitle}": "{blogtitle}の最新情報を購読する",
+    "Subscribed!": "購読する",
+    "with the email address": "メールアドレス",
+    "Your email address": "メールアドレス",
+    "You’ve successfully subscribed to": "登録が完了しました。",
+    "A collection of posts": "記事一覧",
     "A collection of 1 post": "A collection of 1 post",
     "A collection of % posts": "A collection of % posts",
-    "Get the latest posts delivered right to your inbox": "Get the latest posts delivered right to your inbox",
-    "Go to the front page": "Go to the front page",
-    "Latest Posts": "Latest Posts",
-    "Message:": "Message:",
-    "<a href='{url}'>More posts</a> by {name}": "<a href='{url}'>More posts</a> by {name}",
-    "No posts": "No posts",
-    " (Page %)": " (Page %)",
-    "Read More": "Read More",
-    "Read <a href='{url}'>more posts</a> by this author": "Read <a href='{url}'>more posts</a> by this author",
+    "Get the latest posts delivered right to your inbox": "最新情報をメールで受け取る",
+    "Go to the front page": "ホームページに戻る",
+    "Latest Posts": "最新の記事",
+    "Message:": "メッセージ:",
+    "<a href='{url}'>More posts</a> by {name}": "<a href='{url}'>他の記事を読む</a>",
+    "No posts": "記事がありません。",
+    " (Page %)": " (%ページ目)",
+    "Read More": "続きを読む",
+    "Read <a href='{url}'>more posts</a> by this author": "<a href='{url}'>他の記事を読む</a>",
     "Ref:": "Ref:",
     "See all % posts": "See all % posts",
-    "Share this": "Share this",
+    "Share this": "この記事をシェアする",
     "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox": "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox",
     "This post was a collaboration between": "This post was a collaboration between",
     "youremail@example.com": "youremail@example.com",
-    "1 post": "1 post",
-    "% posts": "% posts",
-    "1 min read": "1 min read",
-    "% min read": "% min read"
+    "1 post": "1件の記事",
+    "% posts": "%件の記事",
+    "1 min read": "1分で読めます",
+    "% min read": "%分で読めます"
 }
