--- a/locales/ja.json
+++ b/locales/ja.json
@@ -4,7 +4,7 @@
     "Older Posts": "前の記事",
     "Page {page} of {pages}": "{page} / {pages}",
     "Subscribe": "購読する",
-    "Subscribe to {blogtitle}": "{blogtitle}の最新情報を購読する",
+    "Subscribe to {blogtitle}": "{blogtitle}の最新情報をメールで受け取る",
     "Subscribed!": "購読する",
     "with the email address": "メールアドレス",
     "Your email address": "メールアドレス",
@@ -12,19 +12,19 @@
     "A collection of posts": "記事一覧",
     "A collection of 1 post": "A collection of 1 post",
     "A collection of % posts": "A collection of % posts",
-    "Get the latest posts delivered right to your inbox": "最新情報をメールで受け取る",
+    "Get the latest posts delivered right to your inbox": "無料のメールマガジン",
     "Go to the front page": "ホームページに戻る",
     "Latest Posts": "最新の記事",
     "Message:": "メッセージ:",
     "<a href='{url}'>More posts</a> by {name}": "<a href='{url}'>他の記事を読む</a>",
     "No posts": "記事がありません。",
     " (Page %)": " (%ページ目)",
-    "Read More": "続きを読む",
+    "Read More": "他の記事を読む",
     "Read <a href='{url}'>more posts</a> by this author": "<a href='{url}'>他の記事を読む</a>",
     "Ref:": "Ref:",
     "See all % posts": "See all % posts",
     "Share this": "この記事をシェアする",
-    "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox": "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox",
+    "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox": "最新情報をメールでお届けします。",
     "This post was a collaboration between": "This post was a collaboration between",
     "youremail@example.com": "youremail@example.com",
     "1 post": "1件の記事",
