--- a/locales/ja.json
+++ b/locales/ja.json
@@ -24,7 +24,7 @@
     "Ref:": "Ref:",
     "See all % posts": "See all % posts",
     "Share this": "この記事をシェアする",
-    "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox": "最新情報をメールでお届けします。",
+    "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox": "無料のメールマガジン",
     "This post was a collaboration between": "This post was a collaboration between",
     "youremail@example.com": "youremail@example.com",
     "1 post": "1件の記事",
